target/release/build/anyhow-84ad49ff40ad3e36/stderr
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> /www/mdbook/mdBook/target/release/build/anyhow-84ad49ff40ad3e36/out/probe.rs:2:5
  |
2 |     #![feature(backtrace)]
  |     ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0554`.
